# sir_henry

./: .dockerignore  .gitattributes  .gitignore  README.md  docker-compose.yml  rebuild-agent.sh
.github/workflows/: ci.yml
agent/: Dockerfile  ollama-local.py  pyproject.toml  voices.txt
agent/src/: audio_worker.py  chat.py  config.py  download_models.py  eleven.py  llm_worker.py  main.py  ps.py  realtime_chat.py  simple_chat.py  sirhenry.py  stt.py  stt_worker.py  tts.py  tts_worker.py
agent/src/plugins/: __init__.py  f5_tts.py  faster_whisper_stt.py  ollama_llm.py  piper_tts.py
agent/tests/: conftest.py  f5_tester.py  test_audio_worker.py  test_config.py  test_f5_tts.py  test_faster_whisper_stt.py  test_llm_worker.py  test_main.py  test_plugins_init.py  test_sirhenry.py  test_stt_worker.py  test_tts_worker.py
client/: README.md  pyproject.toml
client/src/: __init__.py  auth.py  list_devices.py  main.py  test_audio.py
client/tests/: __init__.py  conftest.py  test_auth.py  test_list_devices.py  test_main.py
f5-tts-service/: Dockerfile  pyproject.toml
f5-tts-service/models/f5-tts/F5TTS_v1_Base/: model_88500.safetensors
f5-tts-service/src/: download_models.py  main.py
livekit/: config.yml
orin/: main.py  ollama-local.py  pyproject.toml
voice-dataset/: README.md  config.py  docker-compose.yml  elevenlabs.py  mp3-to-wav.py  phrasegen.py  pyproject.toml  sir_henry_datsaet.tgz  tts_generator.py
