[project]
name = "agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Zane Reynolds", email = "zane.reynolds@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "python-dotenv>=1.0.1",
    "pydantic-ai>=0.0.23",
    "nest-asyncio>=1.6.0",
    "openai>=1.61.1",
    "llvmlite>=0.44.0",
    "numba>=0.61.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
    "sounddevice>=0.5.1",
    "speechrecognition>=3.14.1",
    "soundfile>=0.13.1",
    "pyaudio>=0.2.14",
    "faster-whisper>=1.2.1",
    "silero-vad>=6.2.0",
    "numpy>=2.3.4",
    "llama-cpp-python>=0.3.16",
    "requests>=2.31.0",
    "f5-tts>=1.1.10",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.coverage.run]
branch = false
source = ["src"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
    "# pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
omit = [
]

[tool.uv.extra-build-variables]
"llama-cpp-python" = { CMAKE_ARGS = "-DGGML_CUDA=on", FORCE_CMAKE="1" }
