[project]
name = "agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Zane Reynolds", email = "zane.reynolds@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "torch>=2.6.0",
    "numpy>=2.3.4",
    "sounddevice>=0.5.1",
    "faster-whisper>=1.2.1",
    "silero-vad>=6.2.0",
    "requests>=2.31.0",
    "f5-tts>=1.1.10",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.coverage.run]
branch = false
source = ["src"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
    "# pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
omit = [
]

